<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
	<Button android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/new_challenge"
		android:id="@+id/btn_challenge_new"/>
		
	<View android:layout_height="2dp"
		android:layout_width="fill_parent"
		android:background="#fff"
		android:layout_margin="5dp"/>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/challenges_open"
			android:id="@+id/btn_challenges_open"/>
			
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/challenges_history"
			android:id="@+id/btn_challenges_history"/>
			
	</LinearLayout>	
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView android:layout_width="130dp"
			android:layout_height="fill_parent"
			android:gravity="center_vertical"
			android:paddingRight="5dp"
			android:text="@string/name"
			android:textStyle="bold"/>

		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center_vertical|center_horizontal"
			android:paddingRight="5dp"
			android:text="@string/stake"
			android:textStyle="bold"/>
			
		<TextView android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="right|center_vertical"
			android:paddingRight="10dp"
			android:text="@string/status"
			android:textStyle="bold"
			android:id="@+id/heading_status"/>
			
	</LinearLayout>
								
	<ListView android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/list_view"/>
		
</LinearLayout>
