<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">


	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/profile_name_label"/>
			
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/name"
			android:inputType="text"/>
	
	</LinearLayout>
		
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
			
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/profile_email_label"/>
			
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/email"
			android:inputType="text"/>
	</LinearLayout>

	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/update_profile_button"
		android:text="@string/btn_update_profile"/>

</LinearLayout>
