<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<Spinner android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/game_mode"/>

	<Spinner android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/search_list_spinner"/>

	<View android:layout_height="2dp"
		android:layout_width="fill_parent"
		android:background="#fff"
		android:layout_margin="5dp"/>
		
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="left">
		
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_load_prev"
			android:id="@+id/btn_load_prev"/>
		
		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_show_me"
			android:id="@+id/btn_show_me"/>

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_load_next"
			android:id="@+id/btn_load_next"/>
			
	</LinearLayout>

	<ListView android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/list_view" 
		android:layout_marginTop="10dp"/>

</LinearLayout>
