<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:orientation="vertical">

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/mode_info"/>

	<View android:layout_height="2dp"
		android:layout_width="fill_parent"
		android:background="#fff"
		android:layout_margin="5dp"/>

	<Spinner android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/game_mode"/>

	<View android:layout_height="2dp"
		android:layout_width="fill_parent"
		android:background="#fff"
		android:layout_margin="5dp"/>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/game_score_label"
			android:layout_marginRight="10dp"/>

		<EditText android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/score_edit"
			android:inputType="number"
			android:maxLength="7"
			android:minWidth="100dp"/>

		<Button android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_random_score"
			android:id="@+id/random_score_button"/>

	</LinearLayout>

	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_game_over"
		android:id="@+id/game_over_button"/>	

	<View android:layout_height="2dp"
		android:layout_width="fill_parent"
		android:background="#fff"
		android:layout_margin="5dp"/>
		
	<Spinner android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/search_list_spinner"/>
		
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/btn_check_rank"
		android:id="@+id/rank_button"/>
		
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/rank_info"/>

</LinearLayout>
